# ona

./: AGENTS.md  Cargo.toml  README.md  TODO.md  dist-workspace.toml
.github/workflows/: publish-crate.yml  release.yml
src/: main.rs  template.rs
wix/: main.wxs
