[package]
name = "ona"
version = "0.1.0"
edition = "2021"
authors = ["Prayson Wilfred Daniel <praysonpi@gmail.com>"]
description = "A beautiful markdown to HTML renderer that opens in your browser"
license = "MIT"
repository = "https://github.com/Proteusiq/ona"
keywords = ["markdown", "html", "cli", "viewer", "browser"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
pulldown-cmark = { version = "0.12", features = ["simd"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
open = "5"
tempfile = "3"
anyhow = "1"
thiserror = "2"
atty = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
